# This file documents the revision history for Perl extension Catalyst.

  Refactoring / cleanups:
   - NoTabs and Pod tests moved to t/author so that they're not run
     (and then skipped) normally.

5.80014_01 2009-11-22 20:01:23

  Bug fixes:
   - Filehandle now forced to binmode in CGI and FastCGI engines. This appears
     to correct some UTF-8 issues, but may break people's code which relies
     on the old behaviour.

  Refactoring / cleanups:
   - Plugins which inherit from Catalyst::Controller or Catalyst::Component
     are deprecated and now issue warnings.

5.80014 2009-11-21 02:51:14

   Bug fixes:
    - Require MooseX::MethodAttributes 0.17. This in turn requires new
      MooseX::Types to stop warnings in Moose 0.91, and correctly supports
      role combination of roles containing attributed methods.
    - Catalyst::Dispatcher::dispatch_types no longer throws deprecated warnings
      as there is no recommended alternative.
    - Improved the suggested fix warning when component resolution uses regex
      fallback for fully qualified component names.
    - Catalyst::Test::local_request sets ->request on the response.
    - Log flush moved to the end of setup so that roles and plugins which
      hook setup_finalize can log things and have them appear in application
      startup, rather than with the first hit.
    - Require a newer version of LWP to avoid failing tests.
    - Stop warnings when actions are forwarded to during dispatch.
    - Remove warnings for using Catalyst::Dispatcher->dispatch_types as this is a
      valid method to publicly call on the dispatcher.
    - Args ($c->request->args) and CaptureArgs ($c->request->captrues)
      passed to $c->uri_for with an action object ($c->action) will now
      correctly round-trip when args or captures contain / as it is now
      correctly uri encoded to %2F.

  Documentation:
    - Document no-args call to $c->uri_for.
    - Document all top level application configuration parameters.